// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSelect render() basic 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "68.25px",
      }
    }
  >
    <li
      key="0"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "normal",
        }
      }
    >
      ninety nine
    </li>
  </ul>
</div>
`;

exports[`TableSelect render() if 2 cols 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "136.5px",
      }
    }
  >
    <li
      key="0"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "normal",
        }
      }
    >
      twenty one
    </li>
  </ul>
</div>
`;

exports[`TableSelect render() if matched 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "68.25px",
      }
    }
  >
    <li
      key="0"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      two
    </li>
  </ul>
</div>
`;
